# DZ_WEB_10

./: pyproject.toml
dz_project/: db.sqlite3
dz_project/creation_new_author/: apps.py  urls.py  views.py
dz_project/creation_new_author/templates/creation_new_author/: add_quote.html  create_author.html  question.html
dz_project/dz_project/: settings.py  urls.py
dz_project/quotes/: models.py  urls.py  utils.py  views.py
dz_project/quotes/migrations/: 0001_initial.py
dz_project/quotes/static/quotes/: style.css
dz_project/quotes/templates/quotes/: author.html  base.html  index.html  tag_detail.html
dz_project/users/: forms.py  models.py  urls.py  views.py
dz_project/users/migrations/: 0001_initial.py
dz_project/users/templates/registration/: login.html
dz_project/users/templates/users/: logout.html  signup.html
dz_project/utils/: add_quotes_to_mongo.py  migration.py
